--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -78,7 +78,7 @@ iframe {
 /* Titles */
 
 .TitleHead {
-  padding: 16px;
+  padding:16px 16px 0px 16px;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -86,6 +86,10 @@ iframe {
   text-overflow: ellipsis;
   white-space: nowrap;
   flex-wrap: wrap;
+}
+.TitleHead ion-label {
+  color: #00000052;
+  font-weight: bold;
 }
 
 .TitleHead ion-title {
@@ -200,7 +204,7 @@ iframe {
   box-shadow: none;
   position: relative;
   padding: 10px;
-  height: 100%;
+  height: auto;
 }
 
 .ProductCard::part(native) {
@@ -769,7 +773,10 @@ iframe {
 .bottom-shadow {
   box-shadow: 0 5px 0 #f2f2f2;
 }
-
+.bottom-shadow .SaveMoreText{
+  font-size: 8px;
+  background-color: #cccccc36;
+}
 .mr-auto {
   margin-right: auto;
 }
@@ -858,6 +865,9 @@ ion-button.button-outline {
   font-size: 16px;
   letter-spacing: 0;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .FillSegment ion-segment-button::part(indicator) {
@@ -1060,6 +1070,7 @@ ion-button.button-outline {
   border: 1px solid #ccc;
   border-radius: 5px;
   height: 50px;
+  font-size: 9px;
 }
 .ApplyBtn {
   position: absolute;
@@ -1076,8 +1087,8 @@ ion-button.button-outline {
 .BgColor {
   background: #e8edf7;
   text-align: center;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 900;
   color: #3d6fe0;
 }
 .Divider {
@@ -1106,10 +1117,85 @@ ion-button.button-outline {
   border: 1px solid #ccc;
   border-radius: 10px;
 }
-
-.searchbar-input-container ion-icon {
-  display: none;
+.vegIcon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+.vegIcon img {
+  max-width: 20px;
+  width: 40px;
+  border-radius: 0px !important;
+  position: absolute;
+  z-index: 2;
+  top: 17px;
+  left: 17px;
+}
+.saveIcon {
+  position: absolute;
+  right: 0px;
+  top: 8px;
+  z-index: 2;
+  width: 100%;
+  max-width: 50px;
+  height: 40px !important;
+  min-height: auto;
+  --overflow: visible;
+}
+.productRecipe{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.productRecipe span {
+  font-size: 8px;
+  font-weight: bold;
+}
+
+.productRecipe ion-label {
+  font-size: 8px;
+  color: #9a1a0a;
+}
+
+.productRecipe ion-icon {
+  font-size: 8px;
+  color: #9a1a0a;
+}
+.productRecipe img {
+  width: 100%;
+  max-width: 20px;
+  border-radius: 100px;
+}
+.ProfileRecipe {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding-top: 3px;
+}
+.GreenDesign {
+  font-weight: 600;
+  margin: 0;
+  padding: 5px 7px;
+  height: auto;
+  color: #fff;
+  background: #00a032;
+  font-size: 12px;
+  line-height: normal;
+ 
+}
+
+.GreenDesign span {
+  line-height: normal;
+}
+
+.GreenDesign ion-icon {
+  width: 12px;
+  height: 12px;
+}
+
+/* .searchbar-input-container ion-icon {
+  display: none;
+} */
 .AddAddress {
   display: flex;
   gap: 10px;
@@ -1150,7 +1236,7 @@ ion-button.button-outline {
 }
 .TimeingBar {
   position: absolute;
-  bottom: 20px;
+  bottom: 55px ;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1162,6 +1248,9 @@ ion-button.button-outline {
   font-size: 12px;
   color: #fff;
 }
+.bottomRecipe {
+  padding-top: 3px;
+}
 .ReciRow {
   display: flex;
   align-items: center;
@@ -1172,6 +1261,7 @@ ion-button.button-outline {
   height: 100px;
   object-fit: cover;
   border-radius: 10px;
+  position: relative;
 }
 
 .BottomBar {
@@ -1264,6 +1354,7 @@ ion-button.button-outline {
 }
 #cart-page ion-title {
   font-size: 16px;
+  font-weight: bold;
 }
 .AddressText {
   font-size: 12px;
@@ -1276,7 +1367,7 @@ ion-button.button-outline {
    padding-bottom: 80px;
 }
 
-/* Profile */
+/* Profile
 .profileImg{
    display: flex;
    justify-content: center;
@@ -1366,7 +1457,7 @@ label.EditImg img {
 .image-upload > input
 {
    display: none;
-}
+} */
 /* Order-list */
 .order-list{
    border: 1px solid #bd130a;
@@ -1526,4 +1617,407 @@ label.EditProfile img {
 
 .text-button::part(native) {
   padding: 0;
+}
+
+
+
+/* profile */
+.profile-content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  position: relative;
+  padding-bottom: 21px;
+  margin-top: -60px;
+}
+.profileImg img {
+  width: 100%;
+  border-radius: 50%;
+  max-width: 110px;
+  margin-top: -50px;
+  border: 10px solid #fff;
+}
+.profile-content ion-label{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.profile-top-bg {
+  background: #ececec;
+  width: 100%;
+  height: 140px;
+}
+.profileSpace{
+    margin-left: 20px;
+    margin-right: 20px;
+     background-color: #ffffff;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0%), 0 6px 20px 0 rgba(0, 0, 0, 12%);
+}
+
+.profile-content h5{
+  color: #9a1504;
+  font-size: 20px;
+}
+.profile-content h1{
+  font-weight: 600;
+}
+.profile-content .IonLabel {
+    Display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.Profile-bio {
+  padding: 20px 15px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0%), 0 6px 20px 0 rgba(0, 0, 0, 12%);
+  
+}
+.profileBioText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+.profileBioText ion-text {
+  font-size: 14px;
+  color: #00000047;
+  font-weight: bold;
+}
+.profileBioText  ion-text:first-child{
+  color: #9a1504;
+}
+.Profile-tab{
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;}
+
+  .personalTab{
+    background-color: transparent;
+    border-radius: 0px;
+  }
+  .personalTab .segment-button-checked {
+    /* border-bottom: 5px solid #9a1a0a; */
+    --background: none;
+  --background-checked: none;
+  --background-hover: none;
+  --background-hover-opacity: 0;
+  --background-focused: none;
+  --background-focused-opacity: 0;
+  --border-radius: none;
+  --border-width: none;
+  --border-color: none;
+  --border-style: none;
+  --indicator-box-shadow: none;
+  transition: color 0.15s linear 0s, opacity 0.15s linear 0s;;
+}
+
+.personalTab ion-segment-button{
+  border-bottom: 1px solid #9a1a0a;
+  border-radius: 0px !important;
+  
+}
+  .personalTab ion-segment-button::before {
+    margin: 5px 0px;
+    transition: opacity 160ms ease-in-out 100ms;
+    border-left:0px solid #fff;
+    content: "";
+    opacity: 0;
+    will-change: opacity;
+}
+.personalTab ion-label{
+  font-size: 12px;
+  text-align: left !important;
+  font-weight: bold;
+  color: #000;
+}
+.DashBoardImg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: 100%;
+  height: 100%;
+  padding: 20px 0px;
+  transition: linear 0.5s;
+}
+.personalimages{
+  padding: 10px;
+  border-radius: 10px;
+}
+.DashBoardImg:hover .personalimages{
+  background-color: #eeeeee;
+}
+.DashBoardImg ion-text {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+
+/* Dashboard */
+
+.passionateText {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  position: relative;
+  padding-bottom: 55px;
+}
+
+.passionateText img {
+  max-width: 45px;
+  width: 100%;
+}
+
+.passionateText ion-text {
+  color: #9a1a0a;
+  font-size: 20px;
+  font-weight: bold;
+}
+.passionateText::after {
+  content: '';
+  width: 2px;
+  height: 50px;
+  background: #00000047;
+  position: absolute;
+  top: 45px;
+  left: 22px;
+}
+.prohomeText{
+  display: flex;
+  align-items: flex-start;
+  gap: 13px;
+  position: relative;
+}
+.prohomeText img {
+  width: 100%;
+  max-width: 50px;
+  border-radius: 50px;
+  padding: 0px;
+  border: 2px solid #0000003f;
+}
+ul.ProHomeList {
+  padding: 0px;
+  list-style-type: none;
+  margin: 0px;
+}
+
+ul.ProHomeList li {
+  font-size: 8px;
+  margin-top: 6px;
+  font-weight: bold;
+  color: #0000007a;
+}
+.DashBoard-tab{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+ul.ProHomeList li::before {
+  content: "-";
+  padding: 3px;
+}
+.prohomeText ion-text {
+  font-weight: bold;
+  color: #0000009e;
+}
+.prohomeText ion-icon {
+  position: absolute;
+  left: 39px;
+  font-size: 12px;
+  width: 14px;
+  top: -4px;
+}
+.LadderContent {
+  border-bottom: 1px solid #9a1a0a;
+  padding: 15px 0px;
+}
+.ViewsContent .TotalViews ion-text{
+  font-size: 16px;
+  font-weight: bold;
+  color: #9a1a0a
+}
+.TotalViews{
+  display: flex;
+  align-items: center;
+  justify-content: left !important;
+}
+.ViewsContent ion-text {
+  font-size: 10px;
+  color: #000;
+  font-weight: bold;
+}
+.RecipeContent {
+  display: flex;
+  gap: 10px;
+}
+
+.RecipeContent ion-icon {
+  font-size: 28px;
+  color:#9a1a0a;
+  margin: -7px 0px 
+}
+.RecipeContent ion-text {
+  font-size: 16px;
+  color: #9a1a0a;
+  font-weight:bold;
+}
+.RecipeRefresh{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ViewsContent ion-col{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.MorefoodContent{
+  padding: 15px 0px;
+}
+.MorefoodBox{
+  display: flex;
+  align-items: center;
+  justify-content: left !important;
+  gap: 20px;
+  margin: 12px 0px;
+}
+.MorefoodBox:hover.MorefoodBox ion-label {
+  color: #9a1a0a;
+}
+.badgesImg{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.badgesImg img{
+  width: 100%;
+  max-width: 80px;
+}
+.badgesImg ion-text{
+  color: #9a1a0a;
+}
+.verticalLine{
+  position: relative;
+  color: #9a1a0a;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.verticalLine::after {
+  content: "";
+  width: 2px;
+  height: 143px;
+  background-color: #0000002e;
+  position: absolute;
+  top: 25px;
+}
+/* some changes */
+.Banners {
+  width: 100% !important;
+}
+.productName {
+  font-size: 15px;
+  font-weight: bold;
+}
+#file-input {
+  display: none;
+}
+.EditprofileImg{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.EditprofileImg .ProfileImg{
+  border-radius: 100px;
+  max-width: 150px;
+  width: 100%;
+  position: relative;
+ 
+}
+.image-upload {
+  position: absolute;
+  margin-left: 138px;
+  top: 89px;
+}
+/* Recipe product page */
+.RecipeImage {
+  position: relative;
+  border-radius:25px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #00000026;
+}
+.RecipeNonVeg {
+  max-width: 25px;
+  width: 100%;
+  position: absolute;
+  left: 18px;
+  top: 15px;
+}
+.ProfileGirl{
+  width: 100%;
+  max-width: 50px;
+  border-radius: 100px;
+}
+.RecipeProfile{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.RecipeProfile ion-label {
+  font-size: 18px;
+  font-weight: bold;
+}
+.RecipeProfile ion-icon{
+  color: #9a1a0a;
+  width: 25px;
+}
+.profileBox{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.RecipeProName{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  padding-top: 25px;
+}
+.RecipeProName .GreenDesign{
+  padding: 10px 16px;
+}
+.RecipeProName .GreenDesign ion-icon {
+  width: 17px;
+  height: 17px;
+}
+.RecipeProName h1 {
+  margin: 0px;
+  font-weight: bold;
+}
+.RecipeProName .RecipeProfile ion-label,.RecipeProName .RecipeProfile span{
+  font-family: normal;
+  color: #9a1504;
+}
+.cookbtn ion-button{
+    padding: 0px 26px;
+    border-radius: 11px;
+}
+.Recipe-Accordian .recipe-acc-content{
+  background-color: #f8f6f4;
+  border-radius: 10px;
+}
+.recipe-acc-content ion-label{
+  color: #9a1504;
+  font-weight: bold;
 }
